--- a/src/assets/menu-langue.html
+++ b/src/assets/menu-langue.html
@@ -12,7 +12,7 @@ You can direct to multiple languages of your page.
 <div class="list-group list-custom-small">
 <a href="#"><img class="mr-3 mt-n1" width="20" src="/themes/azure/assets/images/flags/United-States.png"><span>English</span><i class="fa fa-angle-right"></i></a>
 <a href="#"><img class="mr-3 mt-n1" width="20" src="/themes/azure/assets/images/flags/India.png"><span>Indian</span><i class="fa fa-angle-right"></i></a>
-<a href="#"><img class="mr-3 mt-n1" width="20" src="/themes/azure/assets/images/flags/Germany.png'|theme}}"><span>German</span><i class="fa fa-angle-right"></i></a>
+<a href="#"><img class="mr-3 mt-n1" width="20" src="/themes/azure/assets/images/flags/Germany.png"><span>German</span><i class="fa fa-angle-right"></i></a>
 <a href="#"><img class="mr-3 mt-n1" width="20" src="/themes/azure/assets/images/flags/Italy.png"><span>Italian</span><i class="fa fa-angle-right"></i></a>
 <a href="#" class="border-0"><img class="mr-3 mt-n1" width="20" src="/themes/azure/assets/images/flags/Spain.png"><span>Spanish</span><i class="fa fa-angle-right"></i></a>
 </div>
