--- a/src/assets/menu-colors.html
+++ b/src/assets/menu-colors.html
@@ -1,6 +1,6 @@
 <div class="card header-card shape-rounded h-40">
 <div class="card-overlay bg-highlight opacity-95"></div>
-<div class="card-bg preload-img" data-src="images/pictures/20s.jpg"></div>
+<div class="card-bg preload-img" data-src="assets/images/pictures/20s.jpg"></div>
 </div>
 <h1 class="text-center color-white mt-4 font-35 font-800">AZURES</h1>
 <p class="text-center color-white font-12 mt-n1 pb-2 mb-3">Put a little color in your life</p>
