--- a/src/assets/menu-footer.html
+++ b/src/assets/menu-footer.html
@@ -1,7 +1,7 @@
 <div class="card card-style mb-0">
 <a href="#" class="footer-title pt-4">AMS</a>
 <p class="text-center font-12 mt-n1 mb-3 opacity-70">
-Always <span class="color-highlight">free</span> in your life
+Toujours <span class="color-highlight">gratuit</span>
 </p>
 <p class="boxed-text-l">
 Se systeme a été construit par l'Entreprise AMS.
@@ -13,13 +13,14 @@ Se systeme a été construit par l'Entreprise AMS.
 <a href="#" data-menu="menu-share" class="icon icon-xs rounded-sm mr-1 shadow-l bg-red2-dark"><i class="fa fa-share-alt"></i></a>
 <a href="#" class="back-to-top icon icon-xs rounded-sm shadow-l bg-highlight color-white"><i class="fa fa-arrow-up"></i></a>
 </div>
-<p class="footer-copyright pb-3 mb-1">&copy; 2019 - 2020 <strong>AMS</strong>. Tout droits réservés.</p>
+<p class="footer-copyright pb-3 mb-1">&copy; 2019 - 2020 <strong>AMS</strong> Tout droits réservés.</p>
 </div>
 <div class="footer-card card shape-rounded" data-card-height="230">
 <div class="card-overlay bg-highlight opacity-95"></div>
-<div class="card-bg preload-img" data-src="{{'assets/images/pictures/20s.jpg'|theme}}"></div>
+<div class="card-bg preload-img" data-src="assets/images/pictures/20s.jpg"></div>
 </div>
 <script type="text/javascript">
     //Activating the function to show the shape at the bottom
     $.card_extender();
 </script>
+
