--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 </head>
 <body class="theme-light" data-highlight="blue2">
   <div id="preloader"><div class="spinner-border color-highlight" role="status"></div></div>
+  <div id="page">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
   <script type="text/javascript" src="assets/scripts/jquery.js"></script>
