creation de la page de connexion

--- a/src/assets/menu-colors.html
+++ b/src/assets/menu-colors.html
@@ -2,17 +2,17 @@
 <div class="card-overlay bg-highlight opacity-95"></div>
 <div class="card-bg preload-img" data-src="assets/images/pictures/20s.jpg"></div>
 </div>
-<h1 class="text-center color-white mt-4 font-35 font-800">AZURES</h1>
-<p class="text-center color-white font-12 mt-n1 pb-2 mb-3">Put a little color in your life</p>
+<h1 class="text-center color-white mt-4 font-35 font-800">AMS</h1>
+<p class="text-center color-white font-12 mt-n1 pb-2 mb-3">Des tonnes de couleurs</p>
 <div class="card card-style">
 <div class="highlight-changer pt-3 pb-2">
 <p class="text-center">
-Azures is packed with a beautiful color scheme.<br>Tap on your favorite! The page will adapt!
+Choisissez ta couleur preferé
 </p>
-<a href="#" data-change-highlight="blue2"><i class="fa fa-circle color-blue2-dark"></i><span class="color-blue2-light">Default</span></a>
-<a href="#" data-change-highlight="red2"><i class="fa fa-circle color-red1-dark"></i><span class="color-red2-light">Red</span></a>
+<a href="#" data-change-highlight="blue2"><i class="fa fa-circle color-blue2-dark"></i><span class="color-blue2-light">Bleu</span></a>
+<a href="#" data-change-highlight="red2"><i class="fa fa-circle color-red1-dark"></i><span class="color-red2-light">Rouge</span></a>
 <a href="#" data-change-highlight="orange"><i class="fa fa-circle color-orange-dark"></i><span class="color-orange-light">Orange</span></a>
-<a href="#" data-change-highlight="pink2"><i class="fa fa-circle color-pink2-dark"></i><span class="color-pink2-light">Pink</span></a>
+<a href="#" data-change-highlight="pink2"><i class="fa fa-circle color-pink2-dark"></i><span class="color-pink2-light">Rose</span></a>
 <a href="#" data-change-highlight="magenta2"><i class="fa fa-circle color-magenta2-dark"></i><span class="color-magenta2-light">Purple</span></a>
 <a href="#" data-change-highlight="aqua"><i class="fa fa-circle color-aqua-dark"></i><span class="color-aqua-light">Aqua</span></a>
 <a href="#" data-change-highlight="teal"><i class="fa fa-circle color-teal-dark"></i><span class="color-teal-light">Teal</span></a>
