--- a/src/assets/menu-footer.html
+++ b/src/assets/menu-footer.html
@@ -9,11 +9,11 @@ Se systeme a été construit par l'Entreprise AMS.
 <div class="text-center mb-3">
 <a href="#" class="icon icon-xs rounded-sm shadow-l mr-1 bg-facebook"><i class="fab fa-facebook-f"></i></a>
 <a href="#" class="icon icon-xs rounded-sm shadow-l mr-1 bg-twitter"><i class="fab fa-twitter"></i></a>
-<a href="#" class="icon icon-xs rounded-sm shadow-l mr-1 bg-phone"><i class="fa fa-phone"></i></a>
+<a href="tel:+22557961200" class="icon icon-xs rounded-sm shadow-l mr-1 bg-phone"><i class="fa fa-phone"></i></a>
 <a href="#" data-menu="menu-share" class="icon icon-xs rounded-sm mr-1 shadow-l bg-red2-dark"><i class="fa fa-share-alt"></i></a>
 <a href="#" class="back-to-top icon icon-xs rounded-sm shadow-l bg-highlight color-white"><i class="fa fa-arrow-up"></i></a>
 </div>
-<p class="footer-copyright pb-3 mb-1">&copy; 2019 - 2020 <strong>AMS</strong> Tout droits réservés.</p>
+<p class="footer-copyright pb-3 mb-1">&copy; 2018 - 2020 <strong>AMS</strong> Tout droits réservés.</p>
 </div>
 <div class="footer-card card shape-rounded" data-card-height="230">
 <div class="card-overlay bg-highlight opacity-95"></div>
