--- a/src/assets/menu-share.html
+++ b/src/assets/menu-share.html
@@ -1,4 +1,4 @@
-<h1 class="text-center font-700 font-26 mt-3 pt-2">Share Azures</h1>
+<h1 class="text-center font-700 font-26 mt-3 pt-2">AMS</h1>
 <p class="boxed-text-xl under-heading">
 Share our page with the world, increase <br>
 your page exposure with the world.
