--- a/src/assets/menu-main.html
+++ b/src/assets/menu-main.html
@@ -13,7 +13,7 @@
 <i class="fa fa-circle"></i>
 </a>
 <a id="nav-starters" href="/telechargement">
-<i data-feather="star" data-feather-line="1" data-feather-size="18" data-feather-color="yellow1-dark" data-feather-bg="yellow1-fade-dark"></i>
+<i data-feather="download" data-feather-line="1" data-feather-size="18" data-feather-color="yellow1-dark" data-feather-bg="yellow1-fade-dark"></i>
 <span>Telechargement</span>
 <i class="fa fa-circle"></i>
 </a>
@@ -33,7 +33,7 @@
 <i class="fa fa-circle"></i>
 </a>
 <a href="#" data-submenu="sub-contact">
-<i data-feather="mail" data-feather-line="1" data-feather-size="16" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-dark"></i>
+<i data-feather="phone" data-feather-line="1" data-feather-size="16" data-feather-color="blue2-dark" data-feather-bg="blue2-fade-dark"></i>
 <span>Contact</span>
 <strong class="badge bg-highlight color-white">1</strong>
 <i class="fa fa-circle"></i>
