--- a/src/assets/menu-main.html
+++ b/src/assets/menu-main.html
@@ -1,4 +1,10 @@
-
+<div class="menu-header">
+  <a href="#" data-toggle-theme class="border-right-0"><i class="fa font-12 color-yellow1-dark fa-lightbulb"></i></a>
+  <a href="#" data-menu="menu-highlights" class="border-right-0"><i class="fa font-12 color-green1-dark fa-brush"></i></a>
+  <a href="#" data-menu="menu-share" class="border-right-0"><i class="fa font-12 color-red2-dark fa-share-alt"></i></a>
+  <a href="index-settings.html" class="border-right-0"><i class="fa font-12 color-blue2-dark fa-cog"></i></a>
+  <a href="#" class="close-menu border-right-0"><i class="fa font-12 color-red2-dark fa-times"></i></a>
+  </div>
 <div class="menu-logo text-center">
 <a href="#"><img class="rounded-circle bg-highlight" width="80" src="assets/images/avatars/5s.png"></a>
 <h1 class="pt-3 font-800 font-28 text-uppercase">AMS</h1>
