--- a/src/index.html
+++ b/src/index.html
@@ -20,34 +20,67 @@
 <body class="theme-light" data-highlight="blue2">
   <div id="preloader"><div class="spinner-border color-highlight" role="status"></div></div>
   <div id="page">
+
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
+
+
+
+<noscript>Please enable JavaScript to continue using this application.</noscript>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
+   https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
 
 <script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyDH5BrfJ3XexfWTqyLkHENeGSEsSncupyM",
-    authDomain: "ams-stefy.firebaseapp.com",
-    databaseURL: "https://ams-stefy-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "ams-stefy",
-    storageBucket: "ams-stefy.appspot.com",
-    messagingSenderId: "638067250330",
-    appId: "1:638067250330:web:0f3ffa1cd7c0a44e427b23",
-    measurementId: "G-MG6VWBMN6B"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+var firebaseConfig = {
+  apiKey: "AIzaSyDH5BrfJ3XexfWTqyLkHENeGSEsSncupyM",
+  authDomain: "ams-stefy.firebaseapp.com",
+  databaseURL: "https://ams-stefy-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "ams-stefy",
+  storageBucket: "ams-stefy.appspot.com",
+  messagingSenderId: "638067250330",
+  appId: "1:638067250330:web:0f3ffa1cd7c0a44e427b23",
+  measurementId: "G-MG6VWBMN6B"
+};
+// Initialize Firebase
+firebase.initializeApp(firebaseConfig);
+firebase.analytics();
 </script>
-  <script type="text/javascript" src="assets/scripts/jquery.js"></script>
+
+
+
+<!-- redirect to landing page -->
+<script type="text/javascript" src="assets/scripts/jquery.min.js"></script>
+<script type="text/javascript" src="assets/scripts/js.cookie.min.js"></script>
+<!-- redirect to landing page -->
+<script>
+  $(document).ready(function () {
+      if (typeof Cookies.get('secondvisit') === 'undefined') {
+          window.location.href = "/bienvenue";
+      }
+  })
+  // Redirect to landing page if 'form_submitted' cookie does not exist
+</script>
+
+<!-- Adds second Visit cookie -->
+<script>
+  jQuery(document).ready(function () {
+      // Create cookie so that the user is no longer redirected
+      var a = Cookies.set('secondvisit', 'true', {
+          expires: 7
+      });
+  });
+</script>
+
+
+<script type="text/javascript" src="assets/scripts/jquery.js"></script>
 <script type="text/javascript" src="assets/scripts/bootstrap.min.js"></script>
 <script type="text/javascript" src="assets/scripts/custom.js"></script>
+
 </body>
 </html>
