--- a/src/index.html
+++ b/src/index.html
@@ -71,9 +71,7 @@ firebase.analytics();
 <script>
   jQuery(document).ready(function () {
       // Create cookie so that the user is no longer redirected
-      var a = Cookies.set('secondvisit', 'true', {
-          expires: 7
-      });
+      var a = Cookies.set('secondvisit', 'true');
   });
 </script>
 
